--- a/index.html
+++ b/index.html
@@ -1,70 +1,16 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
-<meta charset="UTF-8">
-<style>
-body {
-  font-family: Arial;
-  color: white;
-}
-     /* Split the screen in half */
- .split {
-    height: 100%;
-    width: 50%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-  
-  /* Control the left side */
-  .left {
-    left: 0;
-    background-color: #333;
-  }
-  
-  /* Control the right side */
-  .right {
-    right: 0;
-    background-color: #333;
-  }
-  
-  /* If you want the content centered horizontally and vertically */
-  .centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-  
-  /* Style the image inside the centered container, if needed */
-  .centered img {
-    width: 150px;
-    border-radius: 50%;
-  } 
-</style>
-<body>
-
-<div class="split left">
-    <div class="centered">
-     <img src="img_avatar2.png" alt="Avatar woman">
-     <h2>Jane Flex</h2>
-      <p>Some text.</p>
-    </div>
-</div>
-      
-<div class="split right">
-<div class="centered">
-  <img src="img_avatar.png" alt="Avatar man">
-  <h2>John Doe</h2>
-  <p>Some text here too.</p>
-    </div>
-</div> 
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html> 
+    <head>
+        <title>ROVER6</title>
+        <meta charset="UTF-8">
+        <style>
+            h2 {
+                color: #333;
+            }
+        </style>
+    </head>
+    <body>
+        <h2>Hello!</h2>
+        <p>Test</p>
+    </body>
+</html>
