--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <style>
             h2 {
-                color: #333;
+                color: red;
             }
         </style>
     </head>
