--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
         <style>
             h2 {
                 color: red;
+                background-color: #444;
+                text-align: center;
+                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             }
         </style>
     </head>
-    <body>
+    <body style="background-color: #444; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: white;">
         <h2>Hello!</h2>
         <p>Test</p>
     </body>
