--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
         <meta charset="UTF-8">
         <style>
             h2 {
-                color: red;
+                color: white;
                 background-color: #444;
+                font-size: 40px;
                 text-align: center;
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             }
+
+            p {
+                color: white;
+                text-align: center;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
         </style>
     </head>
-    <body style="background-color: #444; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: white;">
-        <h2>Hello!</h2>
+    <body style="background-color: #444; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: white; background: url(https://www.wallpapertip.com/wmimgs/83-838209_java-code-coding-c.jpg);">
+        <h2>ROVER6</h2>
         <p>Test</p>
     </body>
+
+    <div class="tab">
+        <button class="tablinks" onclick="openEvent(event, 'Home')">Home</button>
+        <button class="tablinks" onclick="openEvent(event, 'About Me')">AbMe</button>
+        <button class="tablinks" onclick="openEvent(event, 'Softwares')">Softwares</button>
+      </div>
+
 </html>
