--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 color: white;
                 text-align: center;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: 23px;
             }
         </style>
     </head>
@@ -26,8 +27,12 @@
 
     <div class="tab">
         <button class="tablinks" onclick="openEvent(event, 'Home')">Home</button>
-        <button class="tablinks" onclick="openEvent(event, 'About Me')">AbMe</button>
+        <button class="tablinks" onclick="openEvent(event, 'About Me')">About Me</button>
         <button class="tablinks" onclick="openEvent(event, 'Softwares')">Softwares</button>
       </div>
 
+    <div id="Home" class="tabcontent">
+        <h3>ROVER6</h3>
+        <p>Lorem Ipsum</p>
+    </div>
 </html>
