--- a/index.html
+++ b/index.html
@@ -11,19 +11,24 @@
                 text-align: center;
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             }
-
-            p {
-                color: white;
-                text-align: center;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                font-size: 23px;
-            }
         </style>
     </head>
     <body style="background-color: #444; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: white; background: url(https://www.wallpapertip.com/wmimgs/83-838209_java-code-coding-c.jpg);">
         <h2>ROVER6</h2>
-        <p>Test</p>
     </body>
+
+    <div></div>
+    <div></div>
+    <div></div> 
+
+    <style>
+        div {
+            width: 35px;
+            height: 5px;
+            background-color: black;
+            margin: 6px 0;
+        }
+    </style>
 
     <div class="tab">
         <button class="tablinks" onclick="openEvent(event, 'Home')">Home</button>
@@ -31,8 +36,39 @@
         <button class="tablinks" onclick="openEvent(event, 'Softwares')">Softwares</button>
       </div>
 
-    <div id="Home" class="tabcontent">
-        <h3>ROVER6</h3>
-        <p>Lorem Ipsum</p>
+    <div id="Home" class="Home">
+        <style>
+            h3 {
+                text-align: center;
+                font-size: 40px;
+                text-shadow: black;
+            }
+            p {
+                text-align: left;
+                
+            }
+        </style>
+        <body style="background: #444;">
+            <h3>ROVER6</h3>
+            <p>Lorem Ipsum</p>
+        </body>
+    </div>
+
+    <div id="Softwares" class="Softwares">
+        <style>
+            h3 {
+                text-align: center;
+                font-size: 40px;
+                text-shadow: black;
+            }
+            p {
+                text-align: left;
+                
+            }
+        </style>
+        <body style="background: #444;">
+            <h3>ROVER6</h3>
+            <p>Lorem Ipsum</p>
+        </body>
     </div>
 </html>
